# AMEv2-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
main/: CMakeLists.txt  Kconfig.projbuild  ame_adc.c  ame_adc.h  ame_anneal.c  ame_anneal.h  ame_buzzer.c  ame_buzzer.h  ame_cfg.c  ame_cfg.h  ame_cooling.c  ame_cooling.h  ame_dropgate.c  ame_dropgate.h  ame_stepper.c  ame_stepper.h  ame_temperature.c  ame_temperature.h  ame_ui.c  ame_ui.h  cmd_control.c  cmd_control.h  cmd_pubsub.c  cmd_pubsub.h  idf_component.yml  main.c  ota_task.c  ota_task.h  rtttl.c  rtttl.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
main/web/: index.html
